[package]
name = "polodb-python"  # Must match the Python package name
version = "0.1.0"
edition = "2021"
description = "Python bindings for PoloDB"
license = "Apache License"
license-file = "LICENSE.txt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "rust_polodb"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = "0.24.0"
polodb_core = "5.1.3"
# polodb_core = { path = "../src/polodb_core", default-features = false  }

[profile.release]
lto = "thin"
debug = "line-tables-only"

[profile.dist-release]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
