[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "quiver-pdb"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1.8",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
]
